CHANGELOG
--------------------------


ClanSphere 2010.2 >> 2010-12-XX
___________________________________________________________

-> Added simple database integrity check to database mod (hajo)
-> Changed cookie to be valid in multiple places at a time again (hajo)
-> Changed mods/.htaccess content to be deactivated by default as it caused problems (hajo)
-> Fixed PHP 4 error page introduced with last release to output its results (hajo)
-> Fixed caching mode 'none' to work as expected (hajo)
-> Fixed update check to work again (hajo)
-> Updated jQuery to 1.4.4 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.1 >> 2010-11-15
___________________________________________________________

>> Security: Fixed possible sql injection in replays mod
>> Security: Fixed possible xss in abcode using nested tags
>> Security: Fixed possible xss in gallery print page urls
>> Security: Path disclosure in mods dir is no longer possible on apache servers

-> Added class "noexpand" for textareas to exclude them from the autoexpander (x-ray)
-> Added domain based blocklist to most email forms to reduce the usage of trashmail addresses (fr33z3m4n, hajo)
-> Added field for registration email that is not changeable later on (fr33z3m4n)
-> Added function cs_substr to resolve problems with cutting unicode charsets (hajo)
-> Added function cs_subtemplate_check to look for the existance and path of theme files (hajo)
-> Added search functionality for eventguest entries (hajo)
-> Changed behavior of cs_cache_save a bit for more simple usage (hajo)
-> Fixed ajax with underscores in filenames, due to this hyphens are no longer allowed in them (schiri)
-> Fixed error page on too old php versions by using a fallback file (hajo)
-> Fixed linkus image url to work again (hajo)
-> Updated CKEditor to 3.4.2 (hajo)
-> Updated jQuery to 1.4.3 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.0 >> 2010-08-27